change home and add calendar

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
     "graphql": "^15.5.0",
     "optional-require": "^1.0.3"
   }
