--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-server-express": "^2.12.0",
     "express": "^4.17.1",
+    "graphql": "^15.4.0",
     "mongoose": "^5.9.9"
   },
   "devDependencies": {
