--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
+    "bcrypt": "^5.0.1",
     "graphql": "^15.5.0",
     "optional-require": "^1.0.3"
   }
