--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@fullcalendar/react": "^5.10.1",
     "bcrypt": "^5.0.1",
     "graphql": "^15.5.0",
-    "optional-require": "^1.0.3"
+    "optional-require": "^1.0.3",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.0.1",
+    "react-router-dom": "^6.0.1",
+    "styled-components": "^5.3.3"
   }
 }
