--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "bcrypt": "^5.0.1",
+    "dayjs": "^1.10.7",
     "graphql": "^15.5.0",
     "optional-require": "^1.0.3",
     "react-icons": "^4.3.1",
