--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
     "graphql": "^15.5.0",
     "optional-require": "^1.0.3",
+    "react-bootstrap": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
