--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.10.7",
     "graphql": "^15.5.0",
     "optional-require": "^1.0.3",
+    "react-bootstrap": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
