--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.3.1",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3"
   }
 }
