--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
     "graphql": "^15.5.0",
+    "jwt-decode": "^3.1.2",
+    "jwt-token": "^1.0.9",
     "optional-require": "^1.0.3",
     "react-bootstrap": "^2.0.2",
     "react-icons": "^4.3.1",
