--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "enlace",
   "version": "1.0.0",
+  "engines":{
+    "node":"14.17.3"
+  },
   "description": "",
   "main": "server/server.js",
   "scripts": {
