--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "enlace",
   "version": "1.0.0",
-  "engines":{
-    "node":"14.17.3"
+  "engines": {
+    "node": "14.17.3"
   },
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "cd client && npm start",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
@@ -34,6 +34,7 @@
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
     "react-scroll": "^1.8.4",
+    "serve": "^14.2.0",
     "socket.io": "^4.3.2",
     "styled-components": "^5.3.3"
   }
