--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
