--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start" : "node server/server.js",
+    "server": "nodemon --quiet server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
@@ -17,22 +20,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.3.0",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
-    "bcrypt": "^5.0.1",
+    "apollo-server-express": "^2.12.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "jwt-token": "^1.0.9",
+    "mongoose": "^5.13.22",
     "optional-require": "^1.0.3",
     "react-bootstrap": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "serve": "^14.2.0",
     "socket.io": "^4.3.2",
