--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.3",
     "graphql": "^15.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.3.2",
